--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/syna"]
 	path = themes/syna
 	url = https://github.com/okkur/syna.git
+[submodule "static/admin"]
+	path = static/admin
+	url = https://github.com/woliveiras/netlify-cms-base.git
