--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "themes/syna"]
 	path = themes/syna
 	url = https://github.com/okkur/syna.git
-[submodule "static/admin"]
-	path = static/admin
-	url = https://github.com/woliveiras/netlify-cms-base.git
+[submodule "themes/tale-hugo"]
+	path = themes/tale-hugo
+	url = https://github.com/EmielH/tale-hugo.git
