--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
-theme = "syna"
+languageCode = "pt-BR"
+title = "CMS Model"
+theme = "tale-hugo"
